--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@nestjs/common": "^7.0.11",
     "@nestjs/core": "^7.0.11",
     "@nestjs/platform-express": "^7.0.11",
+    "@nestjs/typeorm": "^7.0.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.1.5",
