--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^7.0.11",
     "@nestjs/platform-express": "^7.0.11",
     "@nestjs/typeorm": "^7.0.0",
+    "mocha": "^8.0.0",
     "moment": "^2.26.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.1.5",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.11",
+    "@nestjs/testing": "^7.1.3",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
