--- a/calenderView/package.json
+++ b/calenderView/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mocha": "^8.0.0"
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "core-js": "^3.6.5",
+    "mocha": "^8.0.0",
+    "regenerator-runtime": "^0.13.5"
   }
 }
