--- a/calenderView/package.json
+++ b/calenderView/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "src/calendar/index.html",
   "directories": {
-    "test": "test"
+    "test": "calenderView/src/test"
   },
   "scripts": {
-    "test": "npm run test",
+    "test": "jest",
     "start": "NODE_ENV=development rm -rf .cache && npx parcel ${DIR:-src}/calendar/index.html"
   },
   "author": "",
@@ -16,6 +16,6 @@
     "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
-    "mocha": "^8.0.1"
+    "jest": "^26.0.1"
   }
 }
