Fehlerbehebung gelöschte DB bei Start und initial Einträge

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,5 +6,5 @@
   "password": "java",
   "database": "calender",
   "entities": ["dist/**/*.entity.js"],
-  "synchronize": true
+  "synchronize": false
 }
