--- a/calenderView/package.json
+++ b/calenderView/package.json
@@ -24,7 +24,9 @@
     "shallow": "^1.0.0"
   },
   "devDependencies": {
+    "cypress": "^4.9.0",
     "enzyme": "^3.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "jest": "^26.0.1"
   }
 }
