--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:e2e": "cypress open",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config src/test/jest-e2e.json"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.11",
     "@nestjs/core": "^7.0.11",
     "@nestjs/platform-express": "^7.0.11",
     "@nestjs/typeorm": "^7.0.0",
+    "cypress": "^4.9.0",
     "mocha": "^8.0.0",
     "moment": "^2.26.0",
     "mysql": "^2.18.1",
@@ -44,6 +45,7 @@
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
