sql / package.json / Body / css
- sql Beispieldaten für Juli optimiert und username länge
- package.json author und contributors hinzugefügt ;)
- css schriftgrösse kleine screens angepasst
- korrektur für rückwärtsblättern und active day sowie zeichenlänge alert

--- a/calenderView/package.json
+++ b/calenderView/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "start": "rm -rf .cache && npx parcel ${DIR:-src}/calendar/index.html"
   },
-  "author": "",
+  "author": "Roberto Salerno",
+  "contributors": ["Sebastian Rüegg"],
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.10.2",
